--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,3 @@
-# This file lists all individuals having contributed content to the repository.
-# For how it is generated, see `hack/generate-authors.sh`.
+# This file lists all contributors to this repository
 
-Fadzaiwendymuzadzi <messagefadzaiwendym@gmail.com>
+Fadzaiwendymuzadzi <fadzaiwendym@gmail.com>
